# User-Service

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  dockerfile  dockerfile_test  pyproject.toml
app/: cosumer.py  main.py  schemas.py  utils.py
app/tests/: test_db.py  test_main.py  test_redis.py
hooks/: commit-msg.py  pre-commit.py  pre-receive.py  prepare-commit-msg.py
open_api/: openapi.yaml
